--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -7,7 +7,7 @@ h3 { color: #842029;
 /* Hero Section */
 
 #Hero-Section {
-  background-image: url("../img/bg-hero.jpg");
+  background-image: url(https://i.postimg.cc/kXLPh7Rv/caleta-condor-pg-3-of-1.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: left;
